--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-cheshire3 [web,sql] >= 1.1.0c4
--e git+https://github.com/bloomonkey/mod-python-wsgi@develop#egg=modpythonwsgi
+# This file is here because many Platforms as a Service look for
+# requirements.txt in the root directory of a project.
+-r requirements/production.txt
