--- a/deploy/uwsgi/apps/index.ini
+++ b/deploy/uwsgi/apps/index.ini
@@ -5,7 +5,7 @@
 vassal_name = %n
 uid = cheshire
 
-chdir = /cheshire3/clic
+chdir = /home/jdejoode/projects/clic/clic/
 procname-prefix = clic-%(vassal_name)-
 module = clic.web.%(vassal_name)
 callable = app
