--- a/deploy/uwsgi/apps/index.ini
+++ b/deploy/uwsgi/apps/index.ini
@@ -3,9 +3,10 @@
 
 [uwsgi]
 vassal_name = %n
-uid = cheshire
+#uid = cheshire
+home = /Users/johan/.virtualenvs/clic/lib/python2.7/site-packages/
 
-chdir = /cheshire3/clic
+chdir = /Users/johan/projects/clic/clic
 procname-prefix = clic-%(vassal_name)-
 module = clic.web.%(vassal_name)
 callable = app
